<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello"
	    android:textAppearance="?android:attr/textAppearanceMedium"
    	android:layout_marginTop="10dip"
    	android:layout_marginBottom="10dip"
    	/>
	<Button android:id="@+id/button1"
		android:text="@string/test_1"
		android:textSize="30sp"  
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="comandaAlex" />
	<Button android:id="@+id/button2"
		android:text="@string/test_2"  
		android:textSize="30sp"  
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="stopAlex" />
	<Button android:id="@+id/button3"
		android:text="@string/test_3"  
		android:textSize="30sp"  
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="sendAlex" />
		
	<TextView
	    android:id="@+id/messaggio"
	    android:text="@string/testo"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    android:layout_marginTop="10dip"
	    android:textSize="40sp"
	    android:textColor="#FF0000"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
		
</LinearLayout>